Fix EN internal links to keep language

--- a/en/contacts.html
+++ b/en/contacts.html
@@ -18,17 +18,17 @@
         <div class="header-main">
             <div class="container header-main-inner">
                 <div class="logo-block">
-                    <a href="/" class="logo-link" aria-label="Home">
+                    <a href="/en/" class="logo-link" aria-label="Home">
                         <img src="/img/logo1.png" alt="ALPIK" class="logo-img" />
                     </a>
                 </div>
                 <nav class="main-nav">
                     <ul>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/about/">About</a></li>
-                        <li><a href="/our-services/">Services</a></li>
-                        <!--<li><a href="/our-projects/">Projects</a></li>-->
-                        <li><a href="/contacts/">Contacts</a></li>
+                        <li><a href="/en/">Home</a></li>
+                        <li><a href="/en/about/">About</a></li>
+                        <li><a href="/en/our-services/">Services</a></li>
+                        <!--<li><a href="/en/our-projects/">Projects</a></li>-->
+                        <li><a href="/en/contacts/">Contacts</a></li>
                     </ul>
                 </nav>
                 <button class="mobile-menu-btn" aria-label="Open menu">&#9776;</button>
@@ -36,11 +36,11 @@
         </div>
         <nav class="mobile-nav" id="mobileNav">
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about/">About</a></li>
-                <li><a href="/our-services/">Services</a></li>
-                <!--<li><a href="/our-projects/">Projects</a></li>-->
-                <li><a href="/contacts/">Contacts</a></li>
+                <li><a href="/en/">Home</a></li>
+                <li><a href="/en/about/">About</a></li>
+                <li><a href="/en/our-services/">Services</a></li>
+                <!--<li><a href="/en/our-projects/">Projects</a></li>-->
+                <li><a href="/en/contacts/">Contacts</a></li>
             </ul>
         </nav>
     </header>
@@ -100,16 +100,16 @@
                 <nav class="footer-col footer-nav" aria-label="Pages">
                     <h3 class="footer-title">Pages</h3>
                     <ul class="footer-nav-list">
-                        <li><a class="footer-link" href="/">Home</a></li>
-                        <li><a class="footer-link" href="/about/">About</a></li>
-                        <li><a class="footer-link" href="/our-services/">Services</a></li>
-                        <!--<li><a class="footer-link" href="/our-projects/">Projects</a></li>-->
-                        <li><a class="footer-link" href="/contacts/">Contacts</a></li>
+                        <li><a class="footer-link" href="/en/">Home</a></li>
+                        <li><a class="footer-link" href="/en/about/">About</a></li>
+                        <li><a class="footer-link" href="/en/our-services/">Services</a></li>
+                        <!--<li><a class="footer-link" href="/en/our-projects/">Projects</a></li>-->
+                        <li><a class="footer-link" href="/en/contacts/">Contacts</a></li>
                     </ul>
                 </nav>
 
                 <div class="footer-col footer-brand" aria-label="Logo">
-                    <a href="/" class="footer-logo-link" aria-label="Home">
+                    <a href="/en/" class="footer-logo-link" aria-label="Home">
                         <img src="/img/logo1.png" alt="ALPIK" class="footer-logo" loading="lazy" />
                     </a>
                 </div>
