--- a/en/index.html
+++ b/en/index.html
@@ -20,17 +20,17 @@
         <div class="header-main">
             <div class="container header-main-inner">
                 <div class="logo-block">
-                    <a href="/" class="logo-link" aria-label="Home">
+                    <a href="/en/" class="logo-link" aria-label="Home">
                         <img src="/img/logo1.png" alt="ALPIK" class="logo-img" />
                     </a>
                 </div>
                 <nav class="main-nav">
                     <ul>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/about/">About</a></li>
-                        <li><a href="/our-services/">Services</a></li>
-                        <!--<li><a href="/our-projects/">Projects</a></li>-->
-                        <li><a href="/contacts/">Contacts</a></li>
+                        <li><a href="/en/">Home</a></li>
+                        <li><a href="/en/about/">About</a></li>
+                        <li><a href="/en/our-services/">Services</a></li>
+                        <!--<li><a href="/en/our-projects/">Projects</a></li>-->
+                        <li><a href="/en/contacts/">Contacts</a></li>
                     </ul>
                 </nav>
                 <button class="mobile-menu-btn" aria-label="Open menu">&#9776;</button>
@@ -38,11 +38,11 @@
         </div>
         <nav class="mobile-nav" id="mobileNav">
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about/">About</a></li>
-                <li><a href="/our-services/">Services</a></li>
-                <!--<li><a href="/our-projects/">Projects</a></li>-->
-                <li><a href="/contacts/">Contacts</a></li>
+                <li><a href="/en/">Home</a></li>
+                <li><a href="/en/about/">About</a></li>
+                <li><a href="/en/our-services/">Services</a></li>
+                <!--<li><a href="/en/our-projects/">Projects</a></li>-->
+                <li><a href="/en/contacts/">Contacts</a></li>
             </ul>
         </nav>
     </header>
@@ -56,7 +56,7 @@
                     partnership and trust</p>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <div class="hero-actions">
-                    <a href="/contacts/" class="hero-btn hero-btn-outline">CONTACT US</a>
+                    <a href="/en/contacts/" class="hero-btn hero-btn-outline">CONTACT US</a>
                     <a href="tel:+380731265006" class="hero-btn hero-btn-fill">CALL</a>
                 </div>
             </div>
@@ -72,7 +72,7 @@
                         </div>
                         <h3>Installation</h3>
                         <p>gutter systems, flashings, glazing systems, and more</p>
-                        <a href="/our-services/" class="card-link">learn more</a>
+                        <a href="/en/our-services/" class="card-link">learn more</a>
                     </div>
                     <div class="service-item">
                         <div class="service-img">
@@ -80,7 +80,7 @@
                         </div>
                         <h3>Repair</h3>
                         <p>chimneys, grain elevators, silos, and more</p>
-                        <a href="/our-services/" class="card-link">learn more</a>
+                        <a href="/en/our-services/" class="card-link">learn more</a>
                     </div>
                     <div class="service-item">
                         <div class="service-img">
@@ -89,7 +89,7 @@
                         <h3>Solar panel installation</h3>
                         <p>We’ll help you choose everything needed for effective solar energy use. Turnkey
                         </p>
-                        <a href="/our-services/" class="card-link">learn more</a>
+                        <a href="/en/our-services/" class="card-link">learn more</a>
                     </div>
                     <div class="service-item">
                         <div class="service-img">
@@ -97,7 +97,7 @@
                         </div>
                         <h3>Cleaning</h3>
                         <p>Washing windows, facades and other surfaces.</p>
-                        <a href="/our-services/" class="card-link">learn more</a>
+                        <a href="/en/our-services/" class="card-link">learn more</a>
                     </div>
                     <div class="service-item">
                         <div class="service-img">
@@ -105,7 +105,7 @@
                         </div>
                         <h3>Roof cleaning</h3>
                         <p>From snow, icicles, leaves and other debris.</p>
-                        <a href="/our-services/" class="card-link">learn more</a>
+                        <a href="/en/our-services/" class="card-link">learn more</a>
                     </div>
                     <div class="service-item">
                         <div class="service-img">
@@ -113,11 +113,11 @@
                         </div>
                         <h3>Steel structure painting</h3>
                         <p>Improves appearance and protects against corrosion.</p>
-                        <a href="/our-services/" class="card-link">learn more</a>
+                        <a href="/en/our-services/" class="card-link">learn more</a>
                     </div>
                 </div>
                 <div class="section-actions">
-                    <a href="/our-services/" class="btn">More</a>
+                    <a href="/en/our-services/" class="btn">More</a>
                 </div>
             </div>
         </section>
@@ -167,7 +167,7 @@
                     </div>
                 </div>
 
-                <a class="about-spotlight-btn" href="/about/">MORE</a>
+                <a class="about-spotlight-btn" href="/en/about/">MORE</a>
             </div>
         </section>
 
@@ -282,7 +282,7 @@
                 </div>
                 <h2 class="contact-cta-title">Message us</h2>
                 <p class="contact-cta-text">We’ll be happy to answer all your questions.</p>
-                <a class="contact-cta-btn" href="/contacts/">MESSAGE</a>
+                <a class="contact-cta-btn" href="/en/contacts/">MESSAGE</a>
             </div>
         </section>
 
@@ -318,16 +318,16 @@
                 <nav class="footer-col footer-nav" aria-label="Pages">
                     <h3 class="footer-title">Pages</h3>
                     <ul class="footer-nav-list">
-                        <li><a class="footer-link" href="/">Home</a></li>
-                        <li><a class="footer-link" href="/about/">About</a></li>
-                        <li><a class="footer-link" href="/our-services/">Services</a></li>
-                        <!--<li><a class="footer-link" href="/our-projects/">Projects</a></li>-->
-                        <li><a class="footer-link" href="/contacts/">Contacts</a></li>
+                        <li><a class="footer-link" href="/en/">Home</a></li>
+                        <li><a class="footer-link" href="/en/about/">About</a></li>
+                        <li><a class="footer-link" href="/en/our-services/">Services</a></li>
+                        <!--<li><a class="footer-link" href="/en/our-projects/">Projects</a></li>-->
+                        <li><a class="footer-link" href="/en/contacts/">Contacts</a></li>
                     </ul>
                 </nav>
 
                 <div class="footer-col footer-brand" aria-label="Logo">
-                    <a href="/" class="footer-logo-link" aria-label="Home">
+                    <a href="/en/" class="footer-logo-link" aria-label="Home">
                         <img src="/img/logo1.png" alt="ALPIK" class="footer-logo" loading="lazy" />
                     </a>
                 </div>
