--- a/en/service-07.html
+++ b/en/service-07.html
@@ -19,16 +19,16 @@
         <div class="header-main">
             <div class="container header-main-inner">
                 <div class="logo-block">
-                    <a href="/" class="logo-link" aria-label="Home">
+                    <a href="/en/" class="logo-link" aria-label="Home">
                         <img src="/img/logo1.png" alt="ALPIK" class="logo-img" />
                     </a>
                 </div>
                 <nav class="main-nav">
                     <ul>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/about/">About</a></li>
-                        <li><a href="/our-services/">Services</a></li>
-                        <li><a href="/contacts/">Contacts</a></li>
+                        <li><a href="/en/">Home</a></li>
+                        <li><a href="/en/about/">About</a></li>
+                        <li><a href="/en/our-services/">Services</a></li>
+                        <li><a href="/en/contacts/">Contacts</a></li>
                     </ul>
                 </nav>
                 <button class="mobile-menu-btn" aria-label="Open menu">&#9776;</button>
@@ -36,10 +36,10 @@
         </div>
         <nav class="mobile-nav" id="mobileNav">
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about/">About</a></li>
-                <li><a href="/our-services/">Services</a></li>
-                <li><a href="/contacts/">Contacts</a></li>
+                <li><a href="/en/">Home</a></li>
+                <li><a href="/en/about/">About</a></li>
+                <li><a href="/en/our-services/">Services</a></li>
+                <li><a href="/en/contacts/">Contacts</a></li>
             </ul>
         </nav>
     </header>
@@ -55,8 +55,8 @@
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <p class="hero-subtitle">We install drainage systems, flashings and heating cables to protect roofs and facades.</p>
                 <div class="hero-actions">
-                    <a href="/our-services/" class="hero-btn hero-btn-outline">ALL SERVICES</a>
-                    <a href="/contacts/" class="hero-btn hero-btn-fill">REQUEST A CONSULTATION</a>
+                    <a href="/en/our-services/" class="hero-btn hero-btn-outline">ALL SERVICES</a>
+                    <a href="/en/contacts/" class="hero-btn hero-btn-fill">REQUEST A CONSULTATION</a>
                 </div>
             </div>
         </section>
@@ -69,7 +69,7 @@
                     <p>If required, we mount anti‑icing and snow‑melting systems: heating cables, controllers and safe cable routing. The result is fewer icicles, safer walkways and longer roof service life.</p>
                 </div>
                 <div class="section-actions">
-                    <a href="/contacts/" class="btn">Contact us</a>
+                    <a href="/en/contacts/" class="btn">Contact us</a>
                 </div>
             </div>
         </section>
@@ -96,7 +96,7 @@
                 </div>
                 <h2 class="contact-cta-title">Message us</h2>
                 <p class="contact-cta-text">We’ll be happy to answer all your questions.</p>
-                <a class="contact-cta-btn" href="/contacts/">MESSAGE</a>
+                <a class="contact-cta-btn" href="/en/contacts/">MESSAGE</a>
             </div>
         </section>
     </main>
@@ -125,15 +125,15 @@
                 <nav class="footer-col footer-nav" aria-label="Pages">
                     <h3 class="footer-title">Pages</h3>
                     <ul class="footer-nav-list">
-                        <li><a class="footer-link" href="/">Home</a></li>
-                        <li><a class="footer-link" href="/about/">About</a></li>
-                        <li><a class="footer-link" href="/our-services/">Services</a></li>
-                        <li><a class="footer-link" href="/contacts/">Contacts</a></li>
+                        <li><a class="footer-link" href="/en/">Home</a></li>
+                        <li><a class="footer-link" href="/en/about/">About</a></li>
+                        <li><a class="footer-link" href="/en/our-services/">Services</a></li>
+                        <li><a class="footer-link" href="/en/contacts/">Contacts</a></li>
                     </ul>
                 </nav>
 
                 <div class="footer-col footer-brand" aria-label="Logo">
-                    <a href="/" class="footer-logo-link" aria-label="Home">
+                    <a href="/en/" class="footer-logo-link" aria-label="Home">
                         <img src="/img/logo1.png" alt="ALPIK" class="footer-logo" loading="lazy" />
                     </a>
                 </div>
