--- a/en/our-services.html
+++ b/en/our-services.html
@@ -18,17 +18,17 @@
         <div class="header-main">
             <div class="container header-main-inner">
                 <div class="logo-block">
-                    <a href="/" class="logo-link" aria-label="Home">
+                    <a href="/en/" class="logo-link" aria-label="Home">
                         <img src="/img/logo1.png" alt="ALPIK" class="logo-img" />
                     </a>
                 </div>
                 <nav class="main-nav">
                     <ul>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/about/">About</a></li>
-                        <li><a href="/our-services/">Services</a></li>
-                        <!--<li><a href="/our-projects/">Projects</a></li>-->
-                        <li><a href="/contacts/">Contacts</a></li>
+                        <li><a href="/en/">Home</a></li>
+                        <li><a href="/en/about/">About</a></li>
+                        <li><a href="/en/our-services/">Services</a></li>
+                        <!--<li><a href="/en/our-projects/">Projects</a></li>-->
+                        <li><a href="/en/contacts/">Contacts</a></li>
                     </ul>
                 </nav>
                 <button class="mobile-menu-btn" aria-label="Open menu">&#9776;</button>
@@ -36,11 +36,11 @@
         </div>
         <nav class="mobile-nav" id="mobileNav">
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about/">About</a></li>
-                <li><a href="/our-services/">Services</a></li>
-               <!-- <li><a href="/our-projects/">Projects</a></li> -->
-                <li><a href="/contacts/">Contacts</a></li>
+                <li><a href="/en/">Home</a></li>
+                <li><a href="/en/about/">About</a></li>
+                <li><a href="/en/our-services/">Services</a></li>
+               <!-- <li><a href="/en/our-projects/">Projects</a></li> -->
+                <li><a href="/en/contacts/">Contacts</a></li>
             </ul>
         </nav>
     </header>
@@ -65,76 +65,76 @@
                 <div class="services-catalog" role="list">
 
 
-                    <a class="services-catalog-card" role="listitem" href="/service-01/" aria-label="Ремонт, обробка, облицювання, фарбування і гідрофобізація фасадів">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-01/" aria-label="Ремонт, обробка, облицювання, фарбування і гідрофобізація фасадів">
                         <div class="services-catalog-num">01</div>
                         <h3 class="services-catalog-title">Ремонт, обробка, облицювання, фарбування і гідрофобізація фасадів</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-02/" aria-label="Ремонт і модернізація димових труб">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-02/" aria-label="Ремонт і модернізація димових труб">
                         <div class="services-catalog-num">02</div>
                         <h3 class="services-catalog-title">Ремонт і модернізація димових труб</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-03/" aria-label="Монтаж димоходів і повітропроводів">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-03/" aria-label="Монтаж димоходів і повітропроводів">
                         <div class="services-catalog-num">03</div>
                         <h3 class="services-catalog-title">Монтаж димоходів і повітропроводів</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-04/" aria-label="Демонтаж димових труб та металоконструкцій">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-04/" aria-label="Демонтаж димових труб та металоконструкцій">
                         <div class="services-catalog-num">04</div>
                         <h3 class="services-catalog-title">Демонтаж димових труб та металоконструкцій</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-05/" aria-label="Комплексний ремонт елеваторів; очищення та ремонт силосів">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-05/" aria-label="Комплексний ремонт елеваторів; очищення та ремонт силосів">
                         <div class="services-catalog-num">05</div>
                         <h3 class="services-catalog-title">Комплексний ремонт елеваторів; очищення та ремонт силосів</h3>
                     </a>
 
-                    <a class="services-catalog-card" role="listitem" href="/service-06/" aria-label="Улаштування та ремонт покрівлі">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-06/" aria-label="Улаштування та ремонт покрівлі">
                         <div class="services-catalog-num">06</div>
                         <h3 class="services-catalog-title">Улаштування та ремонт покрівлі</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-07/" aria-label="Монтаж водостічних систем, відливів та систем сніготанення">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-07/" aria-label="Монтаж водостічних систем, відливів та систем сніготанення">
                         <div class="services-catalog-num">07</div>
                         <h3 class="services-catalog-title">Монтаж водостічних систем, відливів та систем сніготанення</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-08/" aria-label="Фарбування металоконструкцій та піскоструминне очищення поверхонь">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-08/" aria-label="Фарбування металоконструкцій та піскоструминне очищення поверхонь">
                         <div class="services-catalog-num">08</div>
                         <h3 class="services-catalog-title">Фарбування металоконструкцій та піскоструминне очищення поверхонь</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-09/" aria-label="Монтаж вентильованих фасадних систем">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-09/" aria-label="Монтаж вентильованих фасадних систем">
                         <div class="services-catalog-num">09</div>
                         <h3 class="services-catalog-title">Монтаж вентильованих фасадних систем</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-10/" aria-label="Монтаж світлопрозорих конструкцій">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-10/" aria-label="Монтаж світлопрозорих конструкцій">
                         <div class="services-catalog-num">10</div>
                         <h3 class="services-catalog-title">Монтаж світлопрозорих конструкцій</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-11/" aria-label="Монтаж сендвіч-панелей і профлиста">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-11/" aria-label="Монтаж сендвіч-панелей і профлиста">
                         <div class="services-catalog-num">11</div>
                         <h3 class="services-catalog-title">Монтаж сендвіч-панелей і профлиста</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-12/" aria-label="Теплоізоляція та утеплення будівель і квартир">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-12/" aria-label="Теплоізоляція та утеплення будівель і квартир">
                         <div class="services-catalog-num">12</div>
                         <h3 class="services-catalog-title">Теплоізоляція та утеплення будівель і квартир</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-13/" aria-label="Монтаж рекламних конструкцій, навішування банерів">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-13/" aria-label="Монтаж рекламних конструкцій, навішування банерів">
                         <div class="services-catalog-num">13</div>
                         <h3 class="services-catalog-title">Монтаж рекламних конструкцій, навішування банерів</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-14/" aria-label="Очищення снігу, бурульок і наледі з покрівлі та конструкцій">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-14/" aria-label="Очищення снігу, бурульок і наледі з покрівлі та конструкцій">
                         <div class="services-catalog-num">14</div>
                         <h3 class="services-catalog-title">Очищення снігу, бурульок і наледі з покрівлі та конструкцій</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-15/" aria-label="Миття фасадів будівель, вікон та промислових цехів">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-15/" aria-label="Миття фасадів будівель, вікон та промислових цехів">
                         <div class="services-catalog-num">15</div>
                         <h3 class="services-catalog-title">Миття фасадів будівель, вікон та промислових цехів</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-16/" aria-label="Монтаж сонячних панелей на висоті">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-16/" aria-label="Монтаж сонячних панелей на висоті">
                         <div class="services-catalog-num">16</div>
                         <h3 class="services-catalog-title">Монтаж сонячних панелей на висоті</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-17/" aria-label="Герметизація міжпанельних швів">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-17/" aria-label="Герметизація міжпанельних швів">
                         <div class="services-catalog-num">17</div>
                         <h3 class="services-catalog-title">Герметизація міжпанельних швів</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-18/" aria-label="Монтаж декорацій і освітлення">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-18/" aria-label="Монтаж декорацій і освітлення">
                         <div class="services-catalog-num">18</div>
                         <h3 class="services-catalog-title">Монтаж декорацій і освітлення</h3>
                     </a>
@@ -166,7 +166,7 @@
                 </div>
                 <h2 class="contact-cta-title">Message us</h2>
                 <p class="contact-cta-text">We’ll be happy to answer all your questions.</p>
-                <a class="contact-cta-btn" href="/contacts/">MESSAGE</a>
+                <a class="contact-cta-btn" href="/en/contacts/">MESSAGE</a>
             </div>
         </section>
     </main>
@@ -194,16 +194,16 @@
                 <nav class="footer-col footer-nav" aria-label="Pages">
                     <h3 class="footer-title">Pages</h3>
                     <ul class="footer-nav-list">
-                        <li><a class="footer-link" href="/">Home</a></li>
-                        <li><a class="footer-link" href="/about/">About</a></li>
-                        <li><a class="footer-link" href="/our-services/">Services</a></li>
-                       <!-- <li><a class="footer-link" href="/our-projects/">Projects</a></li> -->
-                        <li><a class="footer-link" href="/contacts/">Contacts</a></li>
+                        <li><a class="footer-link" href="/en/">Home</a></li>
+                        <li><a class="footer-link" href="/en/about/">About</a></li>
+                        <li><a class="footer-link" href="/en/our-services/">Services</a></li>
+                       <!-- <li><a class="footer-link" href="/en/our-projects/">Projects</a></li> -->
+                        <li><a class="footer-link" href="/en/contacts/">Contacts</a></li>
                     </ul>
                 </nav>
 
                 <div class="footer-col footer-brand" aria-label="Logo">
-                    <a href="/" class="footer-logo-link" aria-label="Home">
+                    <a href="/en/" class="footer-logo-link" aria-label="Home">
                         <img src="/img/logo1.png" alt="ALPIK" class="footer-logo" loading="lazy" />
                     </a>
                 </div>
