Rename service 16 (panels + inverters)

--- a/our-services.html
+++ b/our-services.html
@@ -129,9 +129,9 @@
                         <div class="services-catalog-num">15</div>
                         <h3 class="services-catalog-title">Миття фасадів будівель, вікон та промислових цехів</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-16/" aria-label="Монтаж сонячних панелей на висоті">
+                    <a class="services-catalog-card" role="listitem" href="/service-16/" aria-label="Монтаж сонячних панелей та інверторів">
                         <div class="services-catalog-num">16</div>
-                        <h3 class="services-catalog-title">Монтаж сонячних панелей на висоті</h3>
+                        <h3 class="services-catalog-title">Монтаж сонячних панелей та інверторів</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/service-17/" aria-label="Герметизація міжпанельних швів">
                         <div class="services-catalog-num">17</div>
