--- a/en/our-services.html
+++ b/en/our-services.html
@@ -65,78 +65,78 @@
                 <div class="services-catalog" role="list">
 
 
-                    <a class="services-catalog-card" role="listitem" href="/en/service-01/" aria-label="Ремонт, обробка, облицювання, фарбування і гідрофобізація фасадів">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-01/" aria-label="Facade repair, finishing, cladding, painting & hydrophobic protection">
                         <div class="services-catalog-num">01</div>
-                        <h3 class="services-catalog-title">Ремонт, обробка, облицювання, фарбування і гідрофобізація фасадів</h3>
+                        <h3 class="services-catalog-title">Facade repair, finishing, cladding, painting & hydrophobic protection</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-02/" aria-label="Ремонт і модернізація димових труб">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-02/" aria-label="Chimney stack repair & modernization">
                         <div class="services-catalog-num">02</div>
-                        <h3 class="services-catalog-title">Ремонт і модернізація димових труб</h3>
+                        <h3 class="services-catalog-title">Chimney stack repair & modernization</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-03/" aria-label="Монтаж димоходів і повітропроводів">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-03/" aria-label="Installation of chimneys & air ducts">
                         <div class="services-catalog-num">03</div>
-                        <h3 class="services-catalog-title">Монтаж димоходів і повітропроводів</h3>
+                        <h3 class="services-catalog-title">Installation of chimneys & air ducts</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-04/" aria-label="Демонтаж димових труб та металоконструкцій">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-04/" aria-label="Demolition of chimneys & steel structures">
                         <div class="services-catalog-num">04</div>
-                        <h3 class="services-catalog-title">Демонтаж димових труб та металоконструкцій</h3>
+                        <h3 class="services-catalog-title">Demolition of chimneys & steel structures</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-05/" aria-label="Комплексний ремонт елеваторів; очищення та ремонт силосів">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-05/" aria-label="Grain elevator overhaul: silo cleaning & repair">
                         <div class="services-catalog-num">05</div>
-                        <h3 class="services-catalog-title">Комплексний ремонт елеваторів; очищення та ремонт силосів</h3>
+                        <h3 class="services-catalog-title">Grain elevator overhaul: silo cleaning & repair</h3>
                     </a>
 
-                    <a class="services-catalog-card" role="listitem" href="/en/service-06/" aria-label="Улаштування та ремонт покрівлі">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-06/" aria-label="Roof installation & repair">
                         <div class="services-catalog-num">06</div>
-                        <h3 class="services-catalog-title">Улаштування та ремонт покрівлі</h3>
+                        <h3 class="services-catalog-title">Roof installation & repair</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-07/" aria-label="Монтаж водостічних систем, відливів та систем сніготанення">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-07/" aria-label="Gutters, flashings & snow-melting systems">
                         <div class="services-catalog-num">07</div>
-                        <h3 class="services-catalog-title">Монтаж водостічних систем, відливів та систем сніготанення</h3>
+                        <h3 class="services-catalog-title">Gutters, flashings & snow-melting systems</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-08/" aria-label="Фарбування металоконструкцій та піскоструминне очищення поверхонь">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-08/" aria-label="Steel structure painting & sandblasting">
                         <div class="services-catalog-num">08</div>
-                        <h3 class="services-catalog-title">Фарбування металоконструкцій та піскоструминне очищення поверхонь</h3>
+                        <h3 class="services-catalog-title">Steel structure painting & sandblasting</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-09/" aria-label="Монтаж вентильованих фасадних систем">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-09/" aria-label="Ventilated facade systems installation">
                         <div class="services-catalog-num">09</div>
-                        <h3 class="services-catalog-title">Монтаж вентильованих фасадних систем</h3>
+                        <h3 class="services-catalog-title">Ventilated facade systems installation</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-10/" aria-label="Монтаж світлопрозорих конструкцій">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-10/" aria-label="Translucent structures installation">
                         <div class="services-catalog-num">10</div>
-                        <h3 class="services-catalog-title">Монтаж світлопрозорих конструкцій</h3>
+                        <h3 class="services-catalog-title">Translucent structures installation</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-11/" aria-label="Монтаж сендвіч-панелей і профлиста">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-11/" aria-label="Sandwich panels & profiled sheet installation">
                         <div class="services-catalog-num">11</div>
-                        <h3 class="services-catalog-title">Монтаж сендвіч-панелей і профлиста</h3>
+                        <h3 class="services-catalog-title">Sandwich panels & profiled sheet installation</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-12/" aria-label="Теплоізоляція та утеплення будівель і квартир">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-12/" aria-label="Thermal insulation for buildings & apartments">
                         <div class="services-catalog-num">12</div>
-                        <h3 class="services-catalog-title">Теплоізоляція та утеплення будівель і квартир</h3>
+                        <h3 class="services-catalog-title">Thermal insulation for buildings & apartments</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-13/" aria-label="Монтаж рекламних конструкцій, навішування банерів">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-13/" aria-label="Advertising structures & banner installation">
                         <div class="services-catalog-num">13</div>
-                        <h3 class="services-catalog-title">Монтаж рекламних конструкцій, навішування банерів</h3>
+                        <h3 class="services-catalog-title">Advertising structures & banner installation</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-14/" aria-label="Очищення снігу, бурульок і наледі з покрівлі та конструкцій">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-14/" aria-label="Snow, icicle & ice removal">
                         <div class="services-catalog-num">14</div>
-                        <h3 class="services-catalog-title">Очищення снігу, бурульок і наледі з покрівлі та конструкцій</h3>
+                        <h3 class="services-catalog-title">Snow, icicle & ice removal</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-15/" aria-label="Миття фасадів будівель, вікон та промислових цехів">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-15/" aria-label="Facade & window washing (incl. industrial sites)">
                         <div class="services-catalog-num">15</div>
-                        <h3 class="services-catalog-title">Миття фасадів будівель, вікон та промислових цехів</h3>
+                        <h3 class="services-catalog-title">Facade & window washing (incl. industrial sites)</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-16/" aria-label="Монтаж сонячних панелей на висоті">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-16/" aria-label="Solar panels & inverter installation">
                         <div class="services-catalog-num">16</div>
-                        <h3 class="services-catalog-title">Монтаж сонячних панелей на висоті</h3>
+                        <h3 class="services-catalog-title">Solar panels & inverter installation</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-17/" aria-label="Герметизація міжпанельних швів">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-17/" aria-label="Sealing interpanel joints">
                         <div class="services-catalog-num">17</div>
-                        <h3 class="services-catalog-title">Герметизація міжпанельних швів</h3>
+                        <h3 class="services-catalog-title">Sealing interpanel joints</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-18/" aria-label="Монтаж декорацій і освітлення">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-18/" aria-label="Decorations & lighting installation">
                         <div class="services-catalog-num">18</div>
-                        <h3 class="services-catalog-title">Монтаж декорацій і освітлення</h3>
+                        <h3 class="services-catalog-title">Decorations & lighting installation</h3>
                     </a>
 
                 </div>
