--- a/en/service-16.html
+++ b/en/service-16.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solar panels installation at height — alpiK</title>
+    <title>Solar panels & inverter installation — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
 <link rel="canonical" href="https://alpik.com.ua/en/service-16/">
@@ -51,9 +51,9 @@
             <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('img/16.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
                 <div class="hero-kicker">Service 16</div>
-                <h1 class="hero-title">Solar panels installation at height</h1>
+                <h1 class="hero-title">Solar panels & inverter installation</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
-                <p class="hero-subtitle">Installation of PV systems on roofs and elevated structures with reliable fastening.</p>
+                <p class="hero-subtitle">Installation of solar panels and inverters on roofs and structures with safe mounting and neat cabling.</p>
                 <div class="hero-actions">
                     <a href="/en/our-services/" class="hero-btn hero-btn-outline">ALL SERVICES</a>
                     <a href="/en/contacts/" class="hero-btn hero-btn-fill">REQUEST A CONSULTATION</a>
@@ -63,10 +63,10 @@
 
         <section class="service-details" aria-label="Service details">
             <div class="container">
-                <h2 class="section-title">16. Solar panels installation at height</h2>
+                <h2 class="section-title">16. Solar panels & inverter installation</h2>
                 <div class="service-prose">
-                    <p>We mount solar panels on roofs and elevated structures, including brackets, rails and panel installation.</p>
-                    <p>We follow manufacturer requirements and site safety rules to ensure correct geometry, tightness and reliable long‑term operation.</p>
+                    <p>We install solar panels and inverters for rooftop PV systems: mounting rails, panel layout, inverter placement and secure fastening.</p>
+                    <p>We route and secure cables, seal roof penetrations where needed, and follow manufacturer requirements and electrical safety rules for reliable long‑term operation.</p>
                 </div>
                 <div class="section-actions">
                     <a href="/en/contacts/" class="btn">Contact us</a>
