--- a/service-16.html
+++ b/service-16.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Монтаж сонячних панелей на висоті — alpiK</title>
+    <title>Монтаж сонячних панелей та інверторів — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
 <link rel="canonical" href="https://alpik.com.ua/service-16/">
@@ -51,9 +51,9 @@
             <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('img/16.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
                 <div class="hero-kicker">Послуга 16</div>
-                <h1 class="hero-title">Монтаж сонячних панелей на висоті</h1>
+                <h1 class="hero-title">Монтаж сонячних панелей та інверторів</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
-                <p class="hero-subtitle">Монтуємо сонячні панелі на дахах і конструкціях: кріплення, розміщення, безпечні роботи на висоті.</p>
+                <p class="hero-subtitle">Монтуємо сонячні панелі та інвертори на дахах і конструкціях: кріплення, розміщення, акуратне підключення та безпечні роботи на висоті.</p>
                 <div class="hero-actions">
                     <a href="/our-services/" class="hero-btn hero-btn-outline">ДО ВСІХ ПОСЛУГ</a>
                     <a href="/contacts/" class="hero-btn hero-btn-fill">ЗАМОВИТИ КОНСУЛЬТАЦІЮ</a>
@@ -63,9 +63,9 @@
 
         <section class="service-details" aria-label="Опис послуги">
             <div class="container">
-                <h2 class="section-title">16. Монтаж сонячних панелей на висоті</h2>
+                <h2 class="section-title">16. Монтаж сонячних панелей та інверторів</h2>
                 <div class="service-prose">
-                    <p>Монтаж сонячних панелей виконується на покрівлях і фасадах із застосуванням сертифікованих кріпильних систем. Забезпечується надійна фіксація, герметичність та безпечне підключення електрообладнання.</p>
+                    <p>Виконуємо монтаж сонячних панелей та інверторів на покрівлях і фасадах із застосуванням сертифікованих кріпильних систем. Забезпечуємо надійну фіксацію, акуратне прокладання кабелів, герметичність вузлів та безпечне підключення обладнання.</p>
                 </div>
                 <div class="section-actions">
                     <a href="/contacts/" class="btn">Написати нам</a>
